stave-macros/tests/fail/builder_unit_struct.rs
use stave_macros::builder;

#[builder]
struct Empty;

fn main() {}
